controller/test/e2e/testdata/mitm/mitm-dynamic-invalid-ca.yaml
apiVersion: v1
kind: Secret
metadata:
  name: mitm-invalid-ca
  namespace: agentgateway-base
type: kubernetes.io/tls
stringData:
  tls.crt: |
    -----BEGIN CERTIFICATE-----
    MIIBtzCCAV2gAwIBAgIRANAmlhw5GoqtXdXz3qe5nLwwCgYIKoZIzj0EAwIwGzEZ
[...]
    WOixK/cGJfjm1RE=
    -----END CERTIFICATE-----
  tls.key: |
    -----BEGIN EC PRIVATE KEY-----
    MHcCAQEEILERHUfgJDnnUdOd4JvwAURLG/V4TJjSS7Ng8+xcmk1+oAoGCCqGSM49
[...]
    069Cg22eA9yWgRG9JRxpazKP/lapsrwsCA==
    -----END EC PRIVATE KEY-----
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: mitm-invalid-ca-gateway
  namespace: agentgateway-base
spec:
  gatewayClassName: agentgateway
  listeners:
    - protocol: HTTPS
      port: 443
      name: https
      hostname: invalid.mitm.example.com
      tls:
        mode: Terminate
        options:
          agentgateway.dev/tls-certificate-source: MITM_DYNAMIC
        certificateRefs:
          - name: mitm-invalid-ca
            kind: Secret
