controller/test/e2e/testdata/mitm/mitm-dynamic.yaml
apiVersion: v1
kind: Secret
metadata:
  name: mitm-ca
  namespace: agentgateway-base
type: kubernetes.io/tls
stringData:
  tls.crt: |
    -----BEGIN CERTIFICATE-----
    MIIBezCCASCgAwIBAgIRAOnmoc9aVSZkyJ59U9r+6KAwCgYIKoZIzj0EAwIwGzEZ
[...]
    -----END CERTIFICATE-----
  tls.key: |
    -----BEGIN EC PRIVATE KEY-----
    MHcCAQEEIFdgbQqn9jrTCbfs5qANaeBwC22ljVJOY9xY6f2g1PRWoAoGCCqGSM49
[...]
    FgB+SRuFIlVB/7SmBHe9wn2gbB0jaziZSw==
    -----END EC PRIVATE KEY-----
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: mitm-gateway
  namespace: agentgateway-base
spec:
  gatewayClassName: agentgateway
  listeners:
    - protocol: HTTPS
      port: 443
      name: https
      hostname: "*.mitm.example.com"
      tls:
        mode: Terminate
        options:
          agentgateway.dev/tls-certificate-source: MITM_DYNAMIC
        certificateRefs:
          - name: mitm-ca
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mitm-route
  namespace: agentgateway-base
spec:
  parentRefs:
    - name: mitm-gateway
  hostnames:
    - first.mitm.example.com
    - second.mitm.example.com
  rules:
    - backendRefs:
        - name: backend
          port: 80
